--- a/m2/markdown-app/src/css/style.css
+++ b/m2/markdown-app/src/css/style.css
@@ -31,33 +31,18 @@ html, body {
   width: 100%;
 }
 
-/* .editor-header .save {
-  border: 0;
-  background: green;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 700;
-  padding: 0 20px;
-} */
-
 .editor-header .save-message {
   align-items: center;
-  
   color: #fff;
   display: flex;
   font: 700 12px sans-serif;
   margin: 0;
   padding: 0 20px;
-
 }
-
-/* .editor-header .save:hover {
-  background: darkgreen;
-} */
 
 textarea,
 .view {
-  height: 100%;
+  height: calc(100% - 40px);
   min-width: 50%;
   max-width: 50%;
 }
@@ -77,4 +62,5 @@ textarea:focus {
   color: #fff;
   font-family: sans-serif;
   padding: 10px;
+  overflow: auto;
 }
